# nsec-2020-teacher-hotline

./: Cargo.toml  README.md  attacker.py  browserhelpers.py  zer0x64-teacher-holtine.yaml
client/: config-overrides.js  package-lock.json  package.json
client/public/: index.html
client/rustpython/: package.json  rustpython_wasm.d.ts  rustpython_wasm.js  rustpython_wasm_bg.d.ts
client/src/: App.css  App.tsx  appstate.tsx  python.tsx
client/src/chatroom/: chatroom.css  chatroom.tsx
client/src/login/: login.tsx
client/src/mainpage/: mainpage.tsx
fake-client/: client.js  package-lock.json  package.json
src/: main.rs  ws_actors.rs
