[package]
name = "teacher-hotline"
version = "0.1.0"
authors = ["zer0x64 <dugre.philippe@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-files = "0.2.1"
actix-web = { version="2.0.0", features= ["rustls"]}
actix-rt = "1.0.0"
actix-web-actors = "2.0.0"
serde = "1.0.106"
json = "0.12.4"
uuid = {version = "0.8.1", features = ["v4"]}
actix-session = "0.3.0"
sha2 = "0.8.1"
hex-literal = "0.2.1"
rand = "0.7.3"
reqwest = "0.10.4"
structopt = "0.3.13"
flexi_logger = {version = "0.15", features = ["colors"]}
log = "0.4.0"
